WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
123866
valueForBorderRadiusShorthand returns wrong values in some case
https://bugs.webkit.org/show_bug.cgi?id=123866
Summary
valueForBorderRadiusShorthand returns wrong values in some case
Ryosuke Niwa
Reported
2013-11-05 21:41:21 PST
Merge
https://chromium.googlesource.com/chromium/blink/+/0933728126f2db06ab8e945efc98bffa2d42af1c
Because valueForBorderRadiusShorthand misses the followings: - showHorizontalBottomRight depends on showHorizontalBottomLeft. - showHorizontalTopRight depends on showHorizontalBottomRight (including showHorizontalBottomLeft). c.f.
http://dev.w3.org/csswg/css-backgrounds/#the-border-radius
Attachments
Fixes the bug
(3.01 KB, patch)
2013-11-05 21:44 PST
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Added the test
(7.16 KB, patch)
2013-11-05 21:46 PST
,
Ryosuke Niwa
kling
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2013-11-05 21:44:29 PST
Created
attachment 216127
[details]
Fixes the bug
Ryosuke Niwa
Comment 2
2013-11-05 21:46:35 PST
Created
attachment 216128
[details]
Added the test
Ryosuke Niwa
Comment 3
2013-11-05 21:58:45 PST
Committed
r158721
: <
http://trac.webkit.org/changeset/158721
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug