valueForBorderRadiusShorthand returns wrong values in some case https://bugs.webkit.org/show_bug.cgi?id=123866

Reviewed by Andreas Kling.

Source/WebCore:

Merge https://chromium.googlesource.com/chromium/blink/+/0933728126f2db06ab8e945efc98bffa2d42af1c

Because valueForBorderRadiusShorthand misses the followings:
- showHorizontalBottomRight depends on showHorizontalBottomLeft.
- showHorizontalTopRight depends on showHorizontalBottomRight (including showHorizontalBottomLeft).

See also http://dev.w3.org/csswg/css-backgrounds/#the-border-radius

Test: fast/css/getComputedStyle/getComputedStyle-borderRadius-2.html

* css/CSSComputedStyleDeclaration.cpp:
(WebCore::getBorderRadiusShorthandValue):

LayoutTests:

* fast/css/getComputedStyle/getComputedStyle-borderRadius-2-expected.txt: Added.
* fast/css/getComputedStyle/getComputedStyle-borderRadius-2.html: Added.


Canonical link: https://commits.webkit.org/142048@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@158721 268f45cc-cd09-0410-ab3c-d52691b4dbfc